<resources>
    <string name="app_name">MYNT Demo</string>

    <string name="title_search">Search MYNTs</string>
    <string name="title_control">Control MYNTs</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <string name="toggle_alarm">Toggle alarm</string>
    <string name="request_rssi">Request rssi</string>
    <string name="request_battery">Request battery</string>
    <string name="request_info">Request info</string>
    <string name="request_control_custom_action">Request control custom action</string>
    <string name="send_control_mode">Send control mode</string>
    <string name="send_control_custom_clicks">Send control custom clicks</string>
    <string name="update_firmware">Update Firmware</string>
    <string name="setup_ble_mode">Setup BLE mode</string>
    <string name="setup_hid_mode">Setup HID mode</string>

    <string name="clear_history">Clear history</string>

    <string-array name="control_modes">
        <item>Music</item>
        <item>Camera</item>
        <item>PPT</item>
        <item>Custom</item>
        <item>Default</item>
    </string-array>

    <string name="addr">Addr</string>
    <string name="rssi">Rssi</string>

    <string name="error_ble_not_supported">BLE not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="error_scan_failed">Scan failed</string>
    <string name="error_address_invalid">Address invalid</string>
    <string name="error_connect_failed">Connect failed</string>
    <string name="error_discover_failed">Discover failed</string>
    <string name="error_disconnect_failed">Disconnect failed</string>

    <string name="tip_wake">Click the button on MYNT device could wake it from sleep!</string>

</resources>
