<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/connect"
          android:checkable="false"
          android:title="@string/connect"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/disconnect"
          android:checkable="false"
          android:title="@string/disconnect"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/toggle_alarm"
          android:checkable="false"
          android:title="@string/toggle_alarm"
          android:orderInCategory="100"
          app:showAsAction="never|withText" />
    <item android:id="@+id/request_rssi"
          android:checkable="false"
          android:title="@string/request_rssi"
          android:orderInCategory="101"
          app:showAsAction="never|withText" />
    <item android:id="@+id/request_battery"
          android:checkable="false"
          android:title="@string/request_battery"
          android:orderInCategory="102"
          app:showAsAction="never|withText" />
    <item android:id="@+id/request_info"
          android:checkable="false"
          android:title="@string/request_info"
          android:orderInCategory="103"
          app:showAsAction="never|withText" />
    <item android:id="@+id/request_control_custom_action"
          android:checkable="false"
          android:title="@string/request_control_custom_action"
          android:orderInCategory="104"
          app:showAsAction="never|withText" />

    <item android:id="@+id/send_control_mode"
          android:checkable="false"
          android:title="@string/send_control_mode"
          android:orderInCategory="200"
          app:showAsAction="never|withText" />

    <item android:id="@+id/clear_history"
          android:checkable="false"
          android:title="@string/clear_history"
          android:orderInCategory="300"
          app:showAsAction="never|withText" />
</menu>